<resources>
    <string name="app_name" translatable="false">VoyagAR</string>

    <!-- Permissions -->
    <string name="permissions_use_your">Use your</string>
    <string name="permissions_camera">camera</string>
    <string name="permissions_and_your">and your</string>
    <string name="permissions_location">location</string>
    <string name="permissions_to_open_your">to open your</string>
    <string name="permissions_both_granted">Permission granted!</string>
    <string name="permissions_both_denied">VoyagAR requires your Camera and your Location to display your surroundings!</string>
    <string name="permissions_camera_denied">VoyagAR requires your Camera to display your surroundings!</string>
    <string name="permissions_location_denied">VoyagAR requires your Location to display your surroundings!</string>
    <string name="permissions_settings">Settings</string>
    <string name="permissions_cancel">Cancel</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="permissions_open_settings">VoyagAR requires your permission to use your Camera and your Location to display your surroundings. Please open Settings and go to Permissions to enable Camera and Location.</string>

    <!-- Overlay -->
    <string name="meters">m</string>
    <string name="kilometers">km</string>

    <!-- Menu -->
    <string name="refine_search">Refine Search</string>
    <string name="category_search">Please select atleast 1 category</string>

    <!-- Volley Errors -->
    <string name="connection_unavailable">Please check your connection!</string>
    <string name="service_unavailable">Service currently unavailable.</string>

    <!-- Details -->
    <string name="address_unavailable">Street address unavailable.</string>
    <string name="contact_unavailable">Contact information unavailable.</string>
    <string name="open_now">Open now!</string>
    <string name="closed">Closed now.</string>
    <string name="rated">rated</string>
    <string name="stars">stars</string>
    <string name="star">star</string>
    <string name="reviewed">Reviewed</string>
    <string name="a11y_hours_expander">Button: hours of operation</string>

    <!-- Settings -->
    <string name="adding">Now displaying nearby</string>
    <string name="removing">No longer displaying nearby</string>
    <string name="cafes">Cafes</string>
    <string name="restaurants">Restaurants</string>
    <string name="bars">Bars</string>
    <string name="parks">Parks</string>
    <string name="fuel">Petrol Stations</string>
    <string name="galleries">Art Galleries</string>
    <string name="movies">Movie Theaters</string>
    <string name="lodgings">Hotels</string>
    <string name="groceries">Markets</string>
    <string name="atms">ATMs and Banks</string>
    <string name="cars">Car Rental</string>
    <string name="transit">Railway Stations</string>
	
	<string name="preferences_types_key" translatable="false">com.example.voyagar.PREFERENCES_TYPES_KEY</string>
    <string name="preferences_type_cafe" translatable="false">com.example.voyagar.PREFERENCES_TYPE_CAFE</string>
    <string name="preferences_type_restaurant" translatable="false">com.example.voyagar.PREFERENCES_TYPE_RESTAURANT</string>
    <string name="preferences_type_bar" translatable="false">com.example.voyagar.PREFERENCES_TYPE_BAR</string>
    <string name="preferences_type_park" translatable="false">com.example.voyagar.PREFERENCES_TYPE_PARK</string>
    <string name="preferences_type_fuel" translatable="false">com.example.voyagar.PREFERENCES_TYPE_FUEL</string>
    <string name="preferences_type_gallery" translatable="false">com.example.voyagar.PREFERENCES_TYPE_GALLERY</string>
    <string name="preferences_type_movie" translatable="false">com.example.voyagar.PREFERENCES_TYPE_MOVIE</string>
    <string name="preferences_type_lodging" translatable="false">com.example.voyagar.PREFERENCES_TYPE_LODGING</string>
    <string name="preferences_type_grocery" translatable="false">com.example.voyagar.PREFERENCES_TYPE_GROCERY</string>
    <string name="preferences_type_atm" translatable="false">com.example.voyagar.PREFERENCES_TYPE_ATM</string>
    <string name="preferences_type_car" translatable="false">com.example.voyagar.PREFERENCES_TYPE_CAR</string>
    <string name="preferences_type_transit" translatable="false">com.example.voyagar.PREFERENCES_TYPE_TRANSIT</string>
    

</resources>
